--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </p>
         </article>
         <article id="online-reputation-management" class="section">
-            <img src="./assets/images/Online Reputation Management.jpg" class="float-right" alt="Online Reputation Management Graphic" />
+            <img src="./assets/images/Online Reputation Management.jpg" class="float-right" alt="" />
             <h3>𝗢𝗻𝗹𝗶𝗻𝗲 𝗥𝗲𝗽𝘂𝘁𝗮𝘁𝗶𝗼𝗻 𝗠𝗮𝗻𝗮𝗴𝗲𝗺𝗲𝗻𝘁</h3>
             <p>
                 𝘛𝘩𝘦 𝘸𝘦𝘣 𝘪𝘴 𝘧𝘶𝘭𝘭 𝘰𝘧 𝘰𝘱𝘪𝘯𝘪𝘰𝘯𝘴, 𝘢𝘯𝘥 𝘴𝘰𝘮𝘦 𝘰𝘧 𝘵𝘩𝘦𝘴𝘦 𝘤𝘢𝘯 𝘣𝘦 𝘯𝘦𝘨𝘢𝘵𝘪𝘷𝘦. 𝘚𝘰𝘤𝘪𝘢𝘭 𝘮𝘦𝘥𝘪𝘢 𝘢𝘭𝘭𝘰𝘸𝘴 𝘢𝘯𝘺𝘰𝘯𝘦 𝘸𝘪𝘵𝘩 𝘢𝘯 𝘪𝘯𝘵𝘦𝘳𝘯𝘦𝘵 𝘤𝘰𝘯𝘯𝘦𝘤𝘵𝘪𝘰𝘯 𝘵𝘰 𝘴𝘢𝘺 𝘸𝘩𝘢𝘵𝘦𝘷𝘦𝘳 𝘵𝘩𝘦𝘺
@@ -50,7 +50,7 @@
             </p>
         </article>
         <article id="social-media-marketing" class="section">
-            <img src="./assets/images/Social Media Marketing.jpg" class="float-left" alt="Social Media Marketing Graphic" />
+            <img src="./assets/images/Social Media Marketing.jpg" class="float-left" alt="" />
             <h3>𝗦𝗼𝗰𝗶𝗮𝗹 𝗠𝗲𝗱𝗶𝗮 𝗠𝗮𝗿𝗸𝗲𝘁𝗶𝗻𝗴</h3>
             <p>
                 𝘚𝘰𝘤𝘪𝘢𝘭 𝘮𝘦𝘥𝘪𝘢 𝘤𝘰𝘯𝘵𝘪𝘯𝘶𝘦𝘴 𝘵𝘰 𝘩𝘢𝘷𝘦 𝘢 𝘴𝘪𝘻𝘢𝘣𝘭𝘦 𝘪𝘯𝘧𝘭𝘶𝘦𝘯𝘤𝘦 𝘰𝘯 𝘣𝘶𝘺𝘪𝘯𝘨 𝘩𝘢𝘣𝘪𝘵𝘴. 𝘚𝘰𝘤𝘪𝘢𝘭 𝘮𝘦𝘥𝘪𝘢 𝘮𝘢𝘳𝘬𝘦𝘵𝘪𝘯𝘨 𝘩𝘦𝘭𝘱𝘴 𝘺𝘰𝘶 𝘥𝘦𝘵𝘦𝘳𝘮𝘪𝘯𝘦 𝘸𝘩𝘪𝘤𝘩 𝘱𝘭𝘢𝘵𝘧𝘰𝘳𝘮𝘴 𝘢𝘳𝘦 𝘴𝘶𝘪𝘵𝘦𝘥
